--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "gw-mobile-proto",
+  "name": "gw-mobile-hello-mum",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.13"
   },
   "dependencies": {
-    "gw-common": "git@github.com:GhostWording/gw-common.git#c978dfc65c9631b0d0992ba7cf5b87b68c7c30d7",
+    "gw-common": "git@github.com:GhostWording/gw-common.git#ff3908c81851abfc546b0cccececda493d0727f6",
     "angular-translate": "~2.0.1",
     "angular-cookies": "~1.2.9"
   }
