--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "gw-common": "git@github.com:GhostWording/gw-common.git#ff3908c81851abfc546b0cccececda493d0727f6",
     "angular-translate": "~2.0.1",
-    "angular-cookies": "~1.2.9"
+    "angular-cookies": "~1.2.9",
+    "ngCordova": "~0.1.6-alpha"
+  },
+  "resolutions": {
+    "angular": "1.2.26"
   }
 }
