--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-jshint": "^1.8.5",
     "gulp-minify-css": "^0.3.0",
     "gulp-minify-html": "^0.1.6",
+    "gulp-postcss": "^3.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.4.0",
     "gulp-sass": "^0.7.1",
