--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer-core": "^3.1.2",
     "bower": "^1.3.3",
     "del": "^0.1.3",
     "gulp": "^3.5.6",
