chore(git): ignore .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@
 /platforms/ios/gw-mobile-proto.xcodeproj/xcuserdata/
 /platforms/ios/CordovaLib/CordovaLib.xcodeproj/xcuserdata/
 /platforms/ios/gw-mobile-proto.xcodeproj/project.xcworkspace/xcuserdata/
+.DS_Store
 *.swp
