--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "gw-common": "git@github.com:GhostWording/gw-common.git#ff3908c81851abfc546b0cccececda493d0727f6",
+    "gw-mobile-common": "git@github.com:GhostWording/gw-mobile-common.git#c23638967e610de93d5e0daac8ab5a66d9063fd5", 
     "angular-translate": "~2.0.1",
     "angular-cookies": "~1.2.9",
     "ngCordova": "~0.1.6-alpha"
