--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.2.0",
     "gulp-if": "^1.2.5",
     "gulp-inject": "^1.0.2",
+    "gulp-insert": "^0.4.0",
     "gulp-jshint": "^1.8.5",
     "gulp-minify-css": "^0.3.0",
     "gulp-minify-html": "^0.1.6",
