--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer-core": "^3.1.2",
     "bower": "^1.3.3",
     "del": "^0.1.3",
+    "glob": "^4.3.2",
     "gulp": "^3.5.6",
     "gulp-angular-templatecache": "^1.4.2",
     "gulp-concat": "^2.2.0",
