--- a/platforms/ios/HelloMum/HelloMum-Info.plist
+++ b/platforms/ios/HelloMum/HelloMum-Info.plist
@@ -49,7 +49,7 @@
       </dict>
     </dict>
     <key>CFBundleIdentifier</key>
-    <string>com.ionicframework.gwmobilehellomother</string>
+    <string>com.ghostwording.hellomum</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
