--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
 /node_modules/
 /src/lib/
 /www/
-/platforms/android/assets/www/
-/platforms/android/CordovaLib/ant-build/
-/platforms/android/ant-build/
-/platforms/ios/www/
-/platforms/ios/gw-mobile-proto.xcodeproj/xcuserdata/
-/platforms/ios/CordovaLib/CordovaLib.xcodeproj/xcuserdata/
-/platforms/ios/gw-mobile-proto.xcodeproj/project.xcworkspace/xcuserdata/
-/platforms/ios/cordova/console.log
+/platforms
 .DS_Store
 *.swp
 *.swo
