--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "glob": "^4.3.2",
     "gulp": "^3.5.6",
     "gulp-angular-templatecache": "^1.4.2",
+    "gulp-callback": "0.0.3",
     "gulp-concat": "^2.2.0",
     "gulp-file": "^0.2.0",
     "gulp-if": "^1.2.5",
