--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,10 @@
     "angular-dropdowns": "~0.4.1"
   },
   "resolutions": {
-    "angular": "~1.3.5"
+    "angular": "~1.3.5",
+    "angular-translate": "~2.5.2"
+  },
+  "devDependencies": {
+    "angular-translate": "~2.5.2"
   }
 }
