--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-cookies": "~1.2.9",
     "gw-common": "git@github.com:GhostWording/gw-common.git#52566963e0e2a605271c2e5c4e140f167dc01ad3",
     "gw-mobile-common": "git@github.com:GhostWording/gw-mobile-common.git#da1fe65884977c3493087eccf1e4d66ad3c71d90",
-    "angular-dropdowns": "~0.4.1"
+    "angular-dropdowns": "~0.4.1",
+    "angular-translate-loader-static-files": "~2.5.2"
   },
   "resolutions": {
     "angular": "~1.3.5"
