--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,15 @@
   "private": "true",
   "dependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.13-nightly-857",
-    "ngCordova": "~0.1.6-alpha",
-    "angular-translate": "~2.5.2",
-    "angular-cookies": "~1.2.9",
+    "ngCordova": "0.1.11-alpha",
+    "angular-translate": "2.5.2",
+    "angular-cookies": "1.2.28",
     "gw-common": "git@github.com:GhostWording/gw-common.git#52566963e0e2a605271c2e5c4e140f167dc01ad3",
     "gw-mobile-common": "git@github.com:GhostWording/gw-mobile-common.git#652cd55caa29e02229538b0c0486219543c2fd17",
-    "angular-dropdowns": "~0.4.1",
-    "angular-translate-loader-static-files": "~2.5.2"
+    "angular-dropdowns": "0.4.1",
+    "angular-translate-loader-static-files": "2.5.2"
   },
   "resolutions": {
-    "angular": "~1.3.5"
+    "angular": "1.3.11"
   }
 }
