--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,7 @@
     "angular-cookies": "1.2.28",
     "gw-common": "git@github.com:GhostWording/gw-common.git#52566963e0e2a605271c2e5c4e140f167dc01ad3",
     "gw-mobile-common": "git@github.com:GhostWording/gw-mobile-common.git#1830f18f30faf0e886b5d3083f853ce5649b36b8",
-    "angular-dropdowns": "0.4.1",
-    "angular-translate-loader-static-files": "2.5.2"
+    "angular-dropdowns": "0.4.1"
   },
   "resolutions": {
     "angular": "1.3.11"
