chore(config): add spanish app name

--- a/config.json
+++ b/config.json
@@ -4,7 +4,10 @@
       "appName": "Hello Mum"
     },
     "fr": {
-      "appName": "Comment Vas Tu"
+      "appName": "Comment Va"
+    },
+    "es": {
+      "appName": "Hola Mamá"
     }
   }
 }
