--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-util": "^2.2.14",
     "jimp": "^0.1.4",
     "jshint-stylish": "^1.0.0",
+    "map-stream": "0.0.5",
     "merge-stream": "^0.1.6",
     "run-sequence": "^1.0.1",
     "streamqueue": "^0.1.1"
