--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
     "angular-translate": "2.5.2",
     "angular-cookies": "1.2.28",
     "gw-common": "git@github.com:GhostWording/gw-common.git#1c8c34214332682d9ef30a9eb73707752a46e025",
-    "gw-mobile-common": "git@github.com:GhostWording/gw-mobile-common.git#458a83f2e5fd78ae93a24917d68398942fb19761",
-    "angular-dropdowns": "0.4.1"
+    "gw-mobile-common": "git@github.com:GhostWording/gw-mobile-common.git#458a83f2e5fd78ae93a24917d68398942fb19761"
   },
   "resolutions": {
     "angular": "1.3.13"
