--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@
 /www
 /scss
 /node_modules
+/fonts
 bower.json
 config.xml
 gulpfile.js
 ionic.project
 package.json
+index.html
 .bowerrc
 .DS_Store
 *.swp
