--- a/config.json
+++ b/config.json
@@ -18,25 +18,30 @@
       "area": "HelloMum",
       "recipientId": "Mother",
       "server": {
-        "enabled": "true"
+        "enabled": true
       },
       "google": {
-        "enabled": "true",
+        "enabled": true,
         "trackerId": "UA-47718196-5",
-        "debugMode": "true"
+        "debugMode": true
       }
     },
     "cordova": {
       "Orientation": "portrait"
+    },
+    "settings": {
+      "notification": true, 
+      "notificationHour": 16,
+      "notificationMinute": 0,
+      "emailSubjectIndex": 0,
+      "mumPetName": "Mum"
     }
   },
   "apiUrl": "http://api.cvd.io/",
-  "textFetchRetryDelay": "4",
-  "imagesPerDay": "8",
-  "textsPerDay": "8",
-  "showWelcomeTextTimes": "2",
-  "imageHeightFactor": "0.55",
-  "defaultNotificationHour": "16",
-  "defaultNotificationMinute": "0",
-  "sendResultPopupShowTime": "1500"
+  "textFetchRetryDelay": 4,
+  "imagesPerDay": 8,
+  "textsPerDay": 8,
+  "showWelcomeTextTimes": 2,
+  "imageHeightFactor": 0.55,
+  "sendResultPopupShowTime": 1500
 }
