feat(appname): change french and spanish app names

--- a/config.json
+++ b/config.json
@@ -8,10 +8,10 @@
         "appName": "Hello Mum"
       },
       "fr": {
-        "appName": "Comment Va"
+        "appName": "Comment vas-tu ?"
       },
       "es": {
-        "appName": "Hola Mamá"
+        "appName": "¡Hola Mamá!"
       }
     },
     "analytics": {
