--- a/config.json
+++ b/config.json
@@ -45,6 +45,16 @@
   "showWelcomeTextTimes": 2,
   "imageHeightFactor": 0.55,
   "sendResultPopupShowTime": 1500,
+  "petNames": [
+    "Mum",
+    "Mummy",
+    "Mommy",
+    "Mom",
+    "Mam",
+    "Maa",
+    "Mama",
+    "Mother"
+  ],
   "swipeHint": {
     "image": {
       "startDelay": 4,
