--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /node_modules
 /lib
 /fonts
+/resources
 bower.json
 config.xml
 gulpfile.js
@@ -15,6 +16,7 @@ package.json
 index.html
 .bowerrc
 .DS_Store
+.npm-debug.log
 *.idea
 *.swp
 *.swo
