feat(sendfacebook): add facebook send configuration values

--- a/config.json
+++ b/config.json
@@ -79,5 +79,12 @@
       "Mother"
     ]
   },
-  "sendResultPopupShowTime": 1500
+  "send": {
+    "facebook": {
+      "useDialog": false,
+      "caption": " ",
+      "description": "www.hellomum.com"
+    },
+    "sendResultPopupShowTime": 1500
+  }
 }
